meecast (1.11.13)
  * Changed url for hourly weather forecast from gismeteo again
  * Fixed bug - Since version 1.11.8 of MeeCast, no clickable list for the forecast and Pulley-Menu broken #79

meecast (1.11.12)
  * Changed url for hourly weather forecast from gismeteo

meecast (1.11.11)
  * Added icons and description to gismeteo.ru
  * Fixed some problems in gismeteo.ru data (pressure and etc)
  * Added hourly weather forecasts to gismeto source

meecast (1.11.10)
  * Added Torzhok to weather.com and openweathermap.org
  * Added icons and description to fmi.fi 
  * Restored gismeteo.ru source
  * Updated Slovak, Slovenian, Swedish, Russian translations
  * Removed tending to mix up languages in selecting region of fmi.fi source.
    Replaced all region's name to Finnish.

meecast (1.11.8)
  * Added icons and description to fmi.fi 
  * Updated Norwegian translation
  * Fixed segmentation fault
  * Fixed hour's negative temperature problem 

meecast (1.11.7)
  * Added icons and description to fmi.fi 
  * Fixed problem with symbol '=' and '?' in file name
  * Updated Russian, Swedish translations

meecast (1.11.6)
  * Updated Russian,Swedish transltions

meecast (1.11.5)
  * Added icons and description to fmi.fi 

meecast (1.11.3)
  * Improved in settings UI

meecast (1.11.2)
  * Fixed sunrise and sunset for fmi.fi source

meecast (1.11.1)
  * Added icons and descriptions to fmi.fi source

meecast (1.1.41)
  * Fixed problem Segmentation fault while trying to load fmi.fi stations, see issue #62

meecast (1.1.38)
  * Added station Giulianova in Italy to weather.com, yr.no. Fixed Teramo
     gps-coordinates
  * Fixed problem hko.gov.hk source

meecast (1.1.37)
  * Fixed problem with yr.no stations. The reason is incorrect work with locales #44


meecast (1.1.36)
  * Restored source yr.no

meecast (1.1.35)
  * Updated Slovak translation. Thanks Ladislav Hodas aka holasl 
  * Fixed - Bom.gov.au as weather source shows the previous day. #41
    (@vasvlad)

