@@ -1,4 +1,6 @@
 meecast (1.11.14) unstable; urgency=low
+  * Added icons to gismeteo.ru
+  * Fixed segmentation fault for gismeteo data
  -- Vlad Vasiliev <vlad@gas.by> Fri, 21 Dec 2024 12:02:23 +0300
 
 meecast (1.11.13) unstable; urgency=low
