@@ -1,3 +1,6 @@
+meecast (1.11.14)
+  * Fixed segmentation fault for gismeteo data
+
 meecast (1.11.13)
   * Changed url for hourly weather forecast from gismeteo again
   * Fixed bug - Since version 1.11.8 of MeeCast, no clickable list for the forecast and Pulley-Menu broken #79
